syntax = "proto3";

package Backend;

option csharp_namespace = "Backend.Api";

service WidgetService {
    rpc AddWidget(AddWidgetRequest) returns (EmptyResponse);
    rpc GetWidget(GetWidgetRequest) returns (GetWidgetResponse);
    rpc UpdateWidget(UpdateWidgetRequest) returns (EmptyResponse);
    rpc ListWidgets(ListWidgetsRequest) returns (ListWidgetsResponse);
}

message AddWidgetRequest{
    string id = 1;
    string description = 2;
}
message EmptyResponse{
}

message GetWidgetRequest{
    string id = 1;
}
message GetWidgetResponse{
    string id = 1;
    string description = 2;
}

message UpdateWidgetRequest{
    string id = 1;
    string description = 2;
}

message ListWidgetsRequest{
}
message ListWidgetsResponse{
    repeated ListWidgetsResponseItem items = 1;
}
message ListWidgetsResponseItem{
    string id = 1;
    string description = 2;
}